--- a/f8-band/index.html
+++ b/f8-band/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta name="description" content="My F8 Band Website " />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, TypeScript, Tailwind, NodeJS, React"
+    />
+    <meta name="author" content="TranDucBinh" />
+    <meta property="og:title" content="F8 Band Website" />
+    <meta property="og:image" content="./src/images/banner-1.jpg" />
+    <meta
+      property="og:description"
+      content="Welcome, This is my F8 Band Website. Enjoy yourself"
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="F8 Band Website" />
+    <meta property="twitter:image" content="./src/images/banner-1.jpg" />
+    <meta
+      property="twitter:description"
+      content="Welcome, This is my F8 Band Website. Enjoy yourself"
+    />
+    <title>My PortFolio</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
