--- a/f8-band/index.html
+++ b/f8-band/index.html
@@ -23,7 +23,7 @@
       property="twitter:description"
       content="Welcome, This is my F8 Band Website. Enjoy yourself"
     />
-    <title>My PortFolio</title>
+    <title>My F8 Band Website ( Tailwind and React ) </title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
